# there-is-no-course

./: README.md  pyproject.toml
episodes/01-there-is-no-course/: script.md
episodes/02-the-big-red-button/: there-is-no-course.py
tests/: test_lessons.py  test_there_is_no_course.py
there_is_no_course/: lessons.py
there_is_no_course/lesson_01_there_is_no_course/: clues.md  script.md
there_is_no_course/lesson_02_the_big_red_button/: script.md
there_is_no_course/lesson_03_lets_play/: python_quiz_app.py
there_is_no_course/lesson_03_the_bridge_of_death/: python-quiz.py  the_bridge_of_death.py
there_is_no_course/lesson_04_python_cafe/: script.md
there_is_no_course/lesson_04_the_green_midget_cafe/: script.md  the_green_midget_cafe.py
there_is_no_course/lesson_04_the_green_midget_cafe/audio/: spam-skit.ra
there_is_no_course/lesson_04_unscripted/: greasy_spoon_cafe.py
